--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body>
     <h1>People Entered</h1>
     <h2 id="count-el">0</h2>
-    <button type="submit" id="increment-btn" onclick="increment">INCREMENT</button>
-    <button id="save-btn">SAVE</button>
+    <button id="increment-btn" onclick="increment()">INCREMENT</button>
+    <button id="save-btn" onclick="save()">SAVE</button>
     <p id="save-el">Previous Entries: </p>
     <script src="index.js"></script>
   </body>
